moved in mutator

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,10 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 
 kotlin.code.style=official
 
-GROUP=io.ultra
-VERSION_NAME=0.0.6
+GROUP=de.peekandpoke.ultra
+VERSION_NAME=0.0.2
 
+kotlin_version=1.3.41
 kotlin_metadata_version=1.4.0
 google_auto_version=1.0-rc4
 kotlinpoet_version=1.0.1
