--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,11 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.0.9
+VERSION_NAME=0.0.10
 
 kotlin_version=1.3.50
 kotlin_metadata_version=1.4.0
 google_auto_version=1.0-rc4
 kotlinpoet_version=1.0.1
 logback_version=1.2.1
-
-
+kotlintest_version=3.3.2
