mutator: fallback getter setter for mutating fields of unknown type (just like primitive types)

--- a/detekt.yml
+++ b/detekt.yml
@@ -449,7 +449,7 @@ style:
     active: false
     maxJumpCount: 1
   MagicNumber:
-    active: true
+    active: false
     excludes: "**/test/**,**/androidTest/**,**/*.Test.kt,**/*.Spec.kt,**/*.Spek.kt"
     ignoreNumbers: '-1,0,1,2'
     ignoreHashCodeFunction: true
