slumber: first steps

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.idea/workspace.xml
 /.idea/tasks.xml
 /.idea/misc.xml
+/.idea/ClojureProjectResolveSettings.xml
 dataSources.ids
 datasources.xml
 
