--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,11 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.0.74
+VERSION_NAME=0.0.76
 
 kotlin_version=1.3.50
+kotlinx_coroutines_version=1.3.2
+
 kotlin_metadata_version=1.4.0
 google_auto_version=1.0-rc4
 kotlinpoet_version=1.0.1
