--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.0.90
+VERSION_NAME=0.0.92
 kotlin_version=1.3.60
 kotlinx_coroutines_version=1.3.2
 
@@ -12,4 +12,5 @@ google_auto_version=1.0-rc6
 kotlinpoet_version=1.4.4
 logback_version=1.2.1
 kotlintest_version=3.4.2
-classindex_version=3.8
+kotlincompiletesting_version=1.2.4
+diffutils_version=2.2
