--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.0.100
+VERSION_NAME=0.0.101
 
 kotlin_version=1.3.60
 kotlinx_coroutines_version=1.3.2
@@ -15,3 +15,4 @@ logback_version=1.2.1
 kotlintest_version=3.4.2
 kotlincompiletesting_version=1.2.5
 diffutils_version=2.2
+classindex_version=3.8
