logging: moved in logging

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.0.109
+VERSION_NAME=0.0.111
 #
-kotlin_version=1.3.61
-kotlinx_coroutines_version=1.3.3
-kotlin_metadata_version=1.4.0
-google_auto_version=1.0-rc6
-kotlinpoet_version=1.4.4
-logback_version=1.2.3
-kotlintest_version=3.4.2
-kotlincompiletesting_version=1.2.5
-diffutils_version=2.2
 classindex_version=3.8
-
+diffutils_version=2.2
+google_auto_version=1.0-rc6
+kotlin_version=1.3.61
+kotlin_metadata_version=1.4.0
+kotlincompiletesting_version=1.2.5
+kotlintest_version=3.4.2
+kotlinpoet_version=1.4.4
+kotlinx_coroutines_version=1.3.3
+logback_version=1.2.3
+slf4j_version=1.7.30
