--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.3.9
+VERSION_NAME=0.3.10
 #
 kotlin_version=1.3.72
 #
@@ -16,4 +16,4 @@ kotlinpoet_version=1.5.0
 kotlinx_coroutines_version=1.3.5
 logback_version=1.2.3
 slf4j_version=1.7.30
-io_jsonwebtoken_jjwt_version=0.11.1
+auth0_jwt_version=3.10.2
