--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.3.20
+VERSION_NAME=0.3.21
 #
 kotlin_version=1.3.72
 #
@@ -17,3 +17,4 @@ kotlinx_coroutines_version=1.3.5
 logback_version=1.2.3
 slf4j_version=1.7.30
 auth0_jwt_version=3.10.2
+klock_version=1.11.2
