--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.3.22
+VERSION_NAME=0.4.0
 #
 kotlin_version=1.3.72
 #
-classindex_version=3.9
+klassindex_version=4.0.1
 diffutils_version=2.2
 google_auto_version=1.0-rc6
 kotlincompiletesting_version=1.2.7
