--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 kotlin.code.style=official
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.4.1
+VERSION_NAME=0.4.8
 #
 kotlin_version=1.3.72
 #
@@ -14,6 +14,7 @@ kotlincompiletesting_version=1.2.7
 kotlintest_version=3.4.2
 kotlinpoet_version=1.5.0
 kotlinx_coroutines_version=1.3.5
+kotlinx_serialization_version=0.20.0
 logback_version=1.2.3
 slf4j_version=1.7.30
 auth0_jwt_version=3.10.2
