common-mp: portable data hazzle slumber: portable data codes

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,11 @@
 // See: https://github.com/CycloneDX/cyclonedx-gradle-plugin
 pluginManagement {
+    plugins {
+        id "org.jetbrains.kotlin.plugin.serialization" version "1.3.72"
+        id "org.jetbrains.dokka" version "0.9.18"
+        id 'com.jfrog.bintray' version '1.8.5'
+    }
+
     resolutionStrategy {
         eachPlugin {
             if (requested.id.toString() == 'org.cyclonedx.bom') {
@@ -7,9 +13,6 @@ pluginManagement {
             }
         }
     }
-//    repositories {
-//        mavenCentral()
-//    }
 }
 
 rootProject.name = 'ultra'
