--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,17 @@
-org.gradle.jvmargs='-Dfile.encoding=UTF-8'
-#
+kotlin_version=1.4.10
 kotlin.code.style=official
 #
-GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.5.16
+org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
-kotlin_version=1.4.10
+GROUP=de.peekandpoke.ultra
+VERSION_NAME=0.6.0
 #
 classindex_version=3.9
 diffutils_version=2.2
 google_auto_version=1.0-rc7
 kotlincompiletesting_version=1.2.11
 kotlintest_version=3.4.2
-# TODO: check 1.6.0
+# TODO: check 1.6.0 ... there are some deprecations though
 kotlinpoet_version=1.5.0
 kotlinx_coroutines_version=1.3.9
 kotlinx_serialization_version=1.0.0-RC
