upgraded dependencies ... especially to kotlinx.serialization:1.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,31 @@ kotlin.code.style=official
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.6.1
+VERSION_NAME=0.7.0
 #
-classindex_version=3.9
+#
+# org.atteo.classindex:classindex
+classindex_version=3.10
+# com.github.wumpz:diffutils
 diffutils_version=2.2
+# com.google.auto.service:auto-service
 google_auto_version=1.0-rc7
-kotlincompiletesting_version=1.2.11
+# com.github.tschuchortdev:kotlin-compile-testing
+kotlincompiletesting_version=1.3.1
+# io.kotlintest:kotlintest-runner-junit5
 kotlintest_version=3.4.2
 # TODO: check 1.6.0 ... there are some deprecations though
+# com.squareup:kotlinpoet:
 kotlinpoet_version=1.5.0
+# org.jetbrains.kotlinx:kotlinx-coroutines-core:
 kotlinx_coroutines_version=1.3.9
-kotlinx_serialization_version=1.0.0-RC
+# org.jetbrains.kotlinx:kotlinx-serialization-core
+kotlinx_serialization_version=1.0.0
+# ch.qos.logback:logback-classic
 logback_version=1.2.3
+# org.slf4j:slf4j-api
 slf4j_version=1.7.30
-auth0_jwt_version=3.10.3
-klock_version=1.12.0
+# com.auth0:java-jwt
+auth0_jwt_version=3.11.0
+# com.soywiz.korlibs.klock:klock-js
+klock_version=1.12.1
