trouble shooting compile issues when external project uses commonmp

--- a/z-playground-js/build.gradle
+++ b/z-playground-js/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:$kotlinx_serialization_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinx_serialization_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
 
     // project deps
