--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,38 @@ kotlin.code.style=official
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 # ###############################################################################################
-GROUP=de.peekandpoke.ultra
-VERSION_NAME=0.16.1
+GROUP=de.devpeak.ultra
+VERSION_NAME=0.17.0
 # ###############################################################################################
+#
+#RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+#SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
+#
+# Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
+#
+POM_URL=https://github.com/PeekAndPoke/ultra
+POM_SCM_URL=https://github.com/username/mylibrary/
+POM_SCM_CONNECTION=scm:git:git://github.com/PeekAndPoke/ultra.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/PeekAndPoke/ultra.git
+#
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+#
+POM_DEVELOPER_ID=PeekAndPoke
+POM_DEVELOPER_NAME=Karsten J. Gerner
+POM_DEVELOPER_EMAIL=kontakt@karsten-gerber.de
+POM_DEVELOPER_URL=https://github.com/PeekAndPoke
+#
+# Signing
+#
+signing.keyId=52090AE9
+# Needs to be set from the command line -Psigning.password=...
+signing.password=""
+signing.secretKeyRingFile=/home/gerk/gpg-keys/52090AE9.gpg
+mavenCentralRepositoryUsername=devpeak.de
+# Needs to be set from the command line -PossrhPassword=...
+mavenCentralRepositoryPassword=""
 #
 # org.atteo.classindex:classindex
 classindex_version=3.10
