--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 # ###############################################################################################
 GROUP=de.devpeak.ultra
-VERSION_NAME=0.17.1
+VERSION_NAME=0.17.2-SNAPSHOT
 # ###############################################################################################
 #
 #RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
@@ -32,6 +32,7 @@ signing.keyId=52090AE9
 # Needs to be set from the command line -Psigning.password=...
 signing.password=""
 signing.secretKeyRingFile=/home/gerk/gpg-keys/52090AE9.gpg
+# The user of the nexus s01.oss.sonatype.org
 mavenCentralRepositoryUsername=devpeak.de
 # Needs to be set from the command line -PossrhPassword=...
 mavenCentralRepositoryPassword=""
