fine tuning detekt.yml

--- a/detekt.yml
+++ b/detekt.yml
@@ -431,6 +431,7 @@ naming:
   PackageNaming:
     active: true
     excludes:
+      - "**/examples/**"
       - "**/test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
