--- a/detekt.yml
+++ b/detekt.yml
@@ -28,6 +28,7 @@ comments:
   active: true
   excludes:
     - "**/test/**"
+    - "**/*Test/**"
     - "**/androidTest/**"
     - "**/*.Test.kt"
     - "**/*.Spec.kt"
@@ -85,6 +86,7 @@ complexity:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -97,6 +99,7 @@ complexity:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -152,6 +155,7 @@ exceptions:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -180,6 +184,7 @@ exceptions:
     active: false
     exceptions:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -190,6 +195,7 @@ exceptions:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -321,6 +327,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -332,6 +339,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -345,6 +353,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -356,6 +365,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -367,6 +377,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -378,6 +389,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -389,6 +401,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -402,6 +415,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
       - "**/*.Spek.kt"
@@ -421,6 +435,7 @@ naming:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
       - "**/*.Spek.kt"
@@ -433,6 +448,7 @@ naming:
     excludes:
       - "**/examples/**"
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -443,6 +459,7 @@ naming:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -455,6 +472,7 @@ naming:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -465,6 +483,7 @@ naming:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -475,6 +494,7 @@ naming:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -493,6 +513,7 @@ performance:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -501,6 +522,7 @@ performance:
     active: true
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -528,6 +550,7 @@ potential-bugs:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
@@ -592,6 +615,7 @@ style:
     active: false
     excludes:
       - "**/test/**"
+      - "**/*Test/**"
       - "**/androidTest/**"
       - "**/*.Test.kt"
       - "**/*.Spec.kt"
