--- a/detekt.yml
+++ b/detekt.yml
@@ -286,7 +286,7 @@ formatting:
   NoWildcardImports:
     active: false
   PackageName:
-    active: true
+    active: false
     autoCorrect: true
   ParameterListWrapping:
     active: true
