changed maven group id to "io.peekandpoke"

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ kotlin.code.style=official
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 # ###############################################################################################
-GROUP=de.devpeak.ultra
-VERSION_NAME=0.17.2
+GROUP=io.peekandpoke.ultra
+VERSION_NAME=0.17.2-SNAPSHOT
 # ###############################################################################################
 #
 #RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
