using new signing key

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-VERSION_NAME=0.23.4-SNAPSHOT
+VERSION_NAME=0.23.4
 # ###############################################################################################
 #
 #RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
@@ -28,10 +28,10 @@ POM_DEVELOPER_URL=https://github.com/PeekAndPoke
 #
 # Signing
 #
-signing.keyId=52090AE9
+signing.keyId=6B1B18BF
 # Needs to be set from the command line -Psigning.password=...
 signing.password=""
-signing.secretKeyRingFile=/home/gerk/gpg-keys/52090AE9.gpg
+signing.secretKeyRingFile=/home/gerk/.gnupg/secring.gpg
 # The user of the nexus s01.oss.sonatype.org
 mavenCentralUsername=devpeak.de
 # Needs to be set from the command line -PossrhPassword=...
