--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include(
         // child projects
         ":common",
         ":commonmp",
+        ":foundation",
         ":kontainer",
         ":logging",
         ":meta",
