--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 #
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-VERSION_NAME=0.40.3-SNAPSHOT
-#VERSION_NAME=0.40.1
+#VERSION_NAME=0.40.3-SNAPSHOT
+VERSION_NAME=0.41.0
 # ###############################################################################################
 #
 #RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
