--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include(
         ":meta",
         ":mutator",
         ":security",
+        ":semanticui",
         ":slumber",
 
         // playground
