added semanticui sub project

--- a/semanticui/gradle.properties
+++ b/semanticui/gradle.properties
@@ -1,6 +1,6 @@
-POM_ARTIFACT_ID=security
+POM_ARTIFACT_ID=semanticui
 #
-POM_NAME="Security"
-POM_DESCRIPTION="Security Utils and data models for Kotlin"
+POM_NAME="Semantic UI"
+POM_DESCRIPTION="Smemantic UI on top of kotlinx/html"
 POM_INCEPTION_YEAR=2020
 #
