--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,18 @@
 kotlin.code.style=official
 #
-org.gradle.jvmargs='-Dfile.encoding=UTF-8'
+kotlin.incremental=false
+kotlin.incremental.ir=false
+kotlin.incremental.js.ir=false
+kotlin.incremental.multiplatform=false
 #
+org.gradle.caching=true
+org.gradle.jvmargs=-Dfile.encoding=UTF-8
+org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-VERSION_NAME=0.43.0-SNAPSHOT
-#VERSION_NAME=0.43.0
+#VERSION_NAME=0.43.0-SNAPSHOT
+VERSION_NAME=0.43.0
 # ###############################################################################################
-#
-#RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
-#SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
 #
