trying to reduce the js size produced by semanticui

--- a/z-playground-js/build.gradle
+++ b/z-playground-js/build.gradle
@@ -17,11 +17,13 @@ dependencies {
 
     // project deps
     api project(":commonmp")
+    api project(":semanticui")
 }
 
 kotlin {
     js(IR) {
-        useCommonJs()
         browser()
+
+        binaries.executable()
     }
 }
