--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ org.gradle.jvmargs=-Dfile.encoding=UTF-8
 org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-VERSION_NAME=0.44.7-SNAPSHOT
-#VERSION_NAME=0.44.6
+#VERSION_NAME=0.44.7.1-SNAPSHOT
+VERSION_NAME=0.45.0
 # ###############################################################################################
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
