slumber: fixed issues with default values on private constructors of data classes

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include(
         ":mutator",
         ":security",
         ":slumber",
+        ":slumber-test-classes",
 
         // playground
         ":z-playground-js",
