--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ kotlin.incremental.js.ir=false
 kotlin.incremental.multiplatform=false
 #
 org.gradle.caching=true
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx8G
 org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-#VERSION_NAME=0.46.0-SNAPSHOT
-VERSION_NAME=0.46.0
+#VERSION_NAME=0.47.0-SNAPSHOT
+VERSION_NAME=0.47.0
 # ###############################################################################################
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
