common: performance optimization for TypeRef by introducing a cache

--- a/z-playground-jvm/build.gradle
+++ b/z-playground-jvm/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation(Deps.kotlinx_coroutines_core)
 
     // project deps
+    api project(":common")
+    api project(":slumber")
     api project(":kontainer")
 }
 
