--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx
 org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-#VERSION_NAME=0.50.0-kotlin170-SNAPSHOT
-VERSION_NAME=0.53.0
+VERSION_NAME=0.55.0.RC1-SNAPSHOT
+#VERSION_NAME=0.53.0
 # ###############################################################################################
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
