helper function to MpLocalDateRange.ToZonedDateTimeRangeConverter.fromHourToHour

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx
 org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
-#VERSION_NAME=0.55.4.RC1-SNAPSHOT
-VERSION_NAME=0.55.4
+VERSION_NAME=0.55.5.RC1-SNAPSHOT
+#VERSION_NAME=0.55.4
 # ###############################################################################################
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
