--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,10 @@ org.gradle.parallel=false
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
 #VERSION_NAME=0.59.3.1.RC1-SNAPSHOT
-VERSION_NAME=0.70.2
+VERSION_NAME=0.70.3
 # ###############################################################################################
 #
-# Publishing https://github.com/vanniktech/gradle-maven-publish-plugin
+# Publishing https://github.com/vanniktech/gradle-maven-publish-plugin`
 #
 POM_URL=https://github.com/PeekAndPoke/ultra
 POM_SCM_URL=https://github.com/PeekAndPoke/ultra
