--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ signing.keyId=6B1B18BF
 signing.password=""
 signing.secretKeyRingFile=/home/gerk/.gnupg/secring.gpg
 # The user of the nexus s01.oss.sonatype.org
-mavenCentralUsername=devpeak.de
+mavenCentralUsername=""
 # Needs to be set from the command line -PossrhPassword=...
 mavenCentralPassword=""
 #
