--- a/common/gradle.properties
+++ b/common/gradle.properties
@@ -1,9 +1,9 @@
 SONATYPE_HOST=S01
 RELEASE_SIGNING_ENABLED=true
 #
-POM_ARTIFACT_ID=commonmp
+POM_ARTIFACT_ID=common
 #
-POM_NAME="CommonMP"
+POM_NAME="Common"
 POM_DESCRIPTION="Common Kotlin Multiplatform Tools"
 POM_INCEPTION_YEAR=2020
 #
