--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ kotlin.code.style=official
 #
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx8g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx8G
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
 # ###############################################################################################
 GROUP=io.peekandpoke.ultra
 #VERSION_NAME=0.59.3.1.RC1-SNAPSHOT
