adding karango to repo

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,14 @@ kotlin.code.style=official
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx8g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx8G
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
+#
 # ###############################################################################################
-GROUP=io.peekandpoke.ultra
-#VERSION_NAME=0.59.3.1.RC1-SNAPSHOT
+#
 VERSION_NAME=0.82.0
+#
+ULTRA_GROUP=io.peekandpoke.ultra
+KARANGO_GROUP=io.peekandpoke.karango
+#
 # ###############################################################################################
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin`
