typed sse api endpoint

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
+#
 kotlin.code.style=official
+kotlin.compiler.preciseCompilationResultsBackup=true
 #
 org.gradle.caching=true
-org.gradle.jvmargs=-Xmx8g -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx8G
+org.gradle.jvmargs=-Xmx4g
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
 #
 # ###############################################################################################
 #
-VERSION_NAME=0.83.6
+VERSION_NAME=0.83.7
 #
 ULTRA_GROUP=io.peekandpoke.ultra
 KARANGO_GROUP=io.peekandpoke.karango
