slumber: added TypedChild<T> for easier polymorphic queries

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,15 @@
 #
 kotlin.code.style=official
 kotlin.compiler.preciseCompilationResultsBackup=true
+kotlin.daemon.jvmargs=-Xmx8G
 #
 org.gradle.caching=true
-org.gradle.jvmargs=-Xmx4g
+org.gradle.jvmargs=-Xmx8g
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
 #
 # ###############################################################################################
 #
-VERSION_NAME=0.88.5
+VERSION_NAME=0.88.6
 #
 FUNKTOR_GROUP=io.peekandpoke.funktor
 ULTRA_GROUP=io.peekandpoke.ultra
