trying to switch to the new maven central publishing flow ... still failing ...

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,10 @@ KRAFT_GROUP=io.peekandpoke.kraft
 #
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin`
 #
+#SONATYPE_HOST=S01
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+#
 POM_URL=https://github.com/PeekAndPoke/ultra
 POM_SCM_URL=https://github.com/PeekAndPoke/ultra
 POM_SCM_CONNECTION=scm:git:git://github.com/PeekAndPoke/ultra.git
@@ -38,10 +42,10 @@ POM_DEVELOPER_URL=https://github.com/PeekAndPoke
 #
 signing.keyId=6B1B18BF
 # Needs to be set from the command line -Psigning.password=...
-signing.password=""
+# signing.password=""
 signing.secretKeyRingFile=/home/gerk/.gnupg/secring.gpg
 # The user of the nexus s01.oss.sonatype.org
-mavenCentralUsername=""
+# mavenCentralUsername=""
 # Needs to be set from the command line -PossrhPassword=...
-mavenCentralPassword=""
+# mavenCentralPassword=""
 #
