--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
 #
 # ###############################################################################################
 #
-VERSION_NAME=0.89.0
+VERSION_NAME=0.90.0
 #
 FUNKTOR_GROUP=io.peekandpoke.funktor
 ULTRA_GROUP=io.peekandpoke.ultra
@@ -21,7 +21,7 @@ KRAFT_GROUP=io.peekandpoke.kraft
 # Publishing https://github.com/vanniktech/gradle-maven-publish-plugin`
 #
 #SONATYPE_HOST=S01
-SONATYPE_HOST=DEFAULT
+SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
 #
 POM_URL=https://github.com/PeekAndPoke/ultra
