new mutator impl

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
 VERSION_NAME=0.91.1
 #
 FUNKTOR_GROUP=io.peekandpoke.funktor
-ULTRA_GROUP=io.peekandpoke.ultra
 KARANGO_GROUP=io.peekandpoke.karango
 KRAFT_GROUP=io.peekandpoke.kraft
+MUTATOR_GROUP=io.peekandpoke.mutator
+ULTRA_GROUP=io.peekandpoke.ultra
 #
 # ###############################################################################################
 #
