moved kraft::streams to ultra::streams

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include(
         ":ultra:semanticui",
         ":ultra:slumber",
         ":ultra:slumber-test-classes",
+        ":ultra:streams",
         ":ultra:vault",
 
         // KRAFT ////////////////////////////////////////////////////////////////////////////////
