in the middle of extracting things and making things more modular

--- a/kraft/semanticui/gradle.properties
+++ b/kraft/semanticui/gradle.properties
@@ -1,7 +1,7 @@
 #
-POM_ARTIFACT_ID=core
+POM_ARTIFACT_ID=semanticui
 #
-POM_NAME="Kraft Core"
-POM_DESCRIPTION="Kraft Core"
+POM_NAME="Kraft - SemanticUI"
+POM_DESCRIPTION="Kraft - SemanticUI"
 POM_INCEPTION_YEAR=2022
 #
