--- a/ultra/html/gradle.properties
+++ b/ultra/html/gradle.properties
@@ -1,7 +1,7 @@
 #
-POM_ARTIFACT_ID=semanticui
+POM_ARTIFACT_ID=html
 #
-POM_NAME="Semantic UI"
-POM_DESCRIPTION="Smemantic UI on top of kotlinx/html"
+POM_NAME="Kotlinx/html helpers"
+POM_DESCRIPTION="Helpers for kotlinx/html"
 POM_INCEPTION_YEAR=2022
 #
