--- a/ultra/streams/gradle.properties
+++ b/ultra/streams/gradle.properties
@@ -1,7 +1,7 @@
 #
-POM_ARTIFACT_ID=semanticui
+POM_ARTIFACT_ID=stream
 #
-POM_NAME="Semantic UI"
-POM_DESCRIPTION="Smemantic UI on top of kotlinx/html"
+POM_NAME="Data Streams"
+POM_DESCRIPTION="Data Streams"
 POM_INCEPTION_YEAR=2022
 #
