Bugfix for exporting kraft addon-jwt-decode v0.94.2

--- a/kraft/addons/jwtdecode/gradle.properties
+++ b/kraft/addons/jwtdecode/gradle.properties
@@ -1,7 +1,7 @@
 #
-POM_ARTIFACT_ID=addons-nxcompile
+POM_ARTIFACT_ID=addons-jwtdecode
 #
-POM_NAME="Kraft Extension NxCompile"
-POM_DESCRIPTION="Kraft Extension NxCompile - Javascript compiler sandbox - https://www.npmjs.com/package/@nx-js/compiler-util"
+POM_NAME="Kraft Extension JwtDecode"
+POM_DESCRIPTION="Kraft Extension JwtDecode - based on 'jwt-decode'"
 POM_INCEPTION_YEAR=2022
 #
