add DOMPurify to markdown rendering v0.94.4

--- a/kraft/addons/marked/gradle.properties
+++ b/kraft/addons/marked/gradle.properties
@@ -2,6 +2,10 @@
 POM_ARTIFACT_ID=addons-marked
 #
 POM_NAME="Kraft Extension Marked"
-POM_DESCRIPTION="Kraft Extension Marked - Javascript markdown parser - https://www.npmjs.com/package/marked"
+POM_DESCRIPTION="Kraft Extension Marked - Markdown rendering \
+Includes \
+  https://www.npmjs.com/package/marked \
+  https://www.npmjs.com/package/dompurify \
+"
 POM_INCEPTION_YEAR=2022
 #
