karango: added update operation coroutines: added cpu and idle measuring for coroutine execution

--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,6 @@ include(
 
         // MUTATOR //////////////////////////////////////////////////////////////////////////////
         ":mutator:core",
-        ":mutator:ksp",
+        ":mutator:ksp"
 )
 
