funktor demo, server running

--- a/funktor-demo/server/src/main/resources/config/application.common.conf
+++ b/funktor-demo/server/src/main/resources/config/application.common.conf
@@ -1,4 +1,4 @@
-include required("keys.env")
+include "keys.env"
 
 ktor {
   deployment {
@@ -18,3 +18,10 @@ auth {
   apiJwtUserNs = "user"
 }
 
+aws {
+  ses {
+    region = "eu-central-1"
+    accessKeyId = "AKIAYE2IAUHIUJUXU3EI"
+    secretAccessKey = ${AWS_SES_SECRET_KEY}
+  }
+}
