--- a/funktor-demo/server/src/main/resources/config/application.dev.conf
+++ b/funktor-demo/server/src/main/resources/config/application.dev.conf
@@ -41,7 +41,7 @@ arangodb {
   password: ""
   host: "localhost"
   port: 8529
-  database: "funktor-dmeo-dev"
+  database: "funktor-demo-dev"
   flags {
     enableProfiler: true
     enableExplain: false
