first steps for mongodb

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ FUNKTOR_GROUP=io.peekandpoke.funktor
 FUNKTOR_DEMO_GROUP=io.peekandpoke.funktor_demo
 KARANGO_GROUP=io.peekandpoke.karango
 KRAFT_GROUP=io.peekandpoke.kraft
+MONKO_GROUP=io.peekandpoke.monko
 MUTATOR_GROUP=io.peekandpoke.mutator
 ULTRA_GROUP=io.peekandpoke.ultra
 #
