--- a/settings.gradle
+++ b/settings.gradle
@@ -58,6 +58,9 @@ include(
         ":karango:addons",
         ":karango:ksp",
 
+        // MONKO ////////////////////////////////////////////////////////////////////////////////
+        ":monko:core",
+
         // MUTATOR //////////////////////////////////////////////////////////////////////////////
         ":mutator:core",
         ":mutator:ksp"
